# EngineFixesSkyrim64

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SETTINGS.md  VR_FIXES_COMPARISON.md  VR_OFFSETS_MAPPING.md  vcpkg.json
.claude/: CLAUDE.md
.github/workflows/: build-reusable.yml  main.yml  pr-test.yml  release.yml
Skyrim/Data/SKSE/Plugins/: EngineFixes.toml  EngineFixesVR.toml
cmake/: headerlist.cmake  sourcelist.cmake
scripts/: settings_release_notes.py
src/: PCH.h  clean_cosaves.cpp  clean_cosaves.h  main.cpp  settings.cpp  settings.h  settings_schema.h  util.h
src/fixes/: ability_condition_bug.h  acoustic_space_listener_null_rigidbody_crash.h  animation_load_signed_crash.h  archery_downward_aiming.h  batchrenderer_renderpass_array_uaf.h  bethesda_net_crash.h  bgskeywordform_load_crash.h  bslightingambientspecular.h  bslightingshader_force_alpha_test.h  bslightingshader_parallax_bug.h  bslightingshaderproperty_shadowmap.h  bsopenvr_hand_index_null_crash.h  bstaskpool_null_vtable.h  bstempeffect_nirtti.h  buy_sell_stack_speech_gain.h  calendar_skipping.h  cell_init.h  climate_load.h  conjuration_enchant_absorbs.h  console_save_deadlock.h  copybonetransform_null_crash.h  create_armor_node_nullptr_crash.h  culling_freed_object_crash.h  double_perk_apply.h  equip_shout_event_spam.h  esl_cell_loading_bug.h  facegen_morphdatahead_nullptr_crash.h  fixes.cpp  fixes.h  get_keyword_item_count.h  getgamesetting_not_found_crash.h  gheap_leak_detection_crash.h  global_time.h  initialize_hit_data_nullptr_crash.h  is_player_in_region_parent_cell_check.h  keyboard_poll_scancode_oob_crash.h  lip_sync.h  lockpicking_menu_init_crash.h  memory_access_errors.h  mo5s_typo.h  (+19 more)
src/memory/: allocator.cpp  allocator.h  havok_memory_system.h  memory.cpp  memory.h  memory_manager.h  renderpass_cache.h  scaleform_allocator.h  scrapheap.h
src/patches/: disable_chargen_precache.h  disable_snow_flag.h  enable_achievements.h  form_caching.h  ini_setting_collection.h  max_stdio.h  patches.cpp  patches.h  regular_quicksaves.h  safe_exit.h  save_added_sound_categories.cpp  save_added_sound_categories.h  save_game_max_size.h  scrolling_doesnt_switch_pov.h  sleep_wait_time.h  tree_lod_reference_caching.cpp  tree_lod_reference_caching.h  waterflow_animation.cpp  waterflow_animation.h
src/warnings/: warnings.cpp  warnings.h
